Fix social icon spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,5 +4,5 @@ footer {
 }
 
 i {
-	margin: auto 1em auto 1em;
+	margin: 0 2px;
 }
